--- a/css/whatsapp.css
+++ b/css/whatsapp.css
@@ -47,6 +47,6 @@
         height: 50px;
         font-size: 26px;
         bottom: 20px;
-        right: 20px;
+        right: 15px;
     }
 }
